<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center|bottom"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_page_logo_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.5"
        android:background="#50000000"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:gravity="center|bottom">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center|end"
                android:paddingEnd="15dp"
                android:paddingStart="5dp"
                android:text="@string/login_01"
                android:textColor="@android:color/background_light"
                android:textSize="12sp" />

            <AutoCompleteTextView
                android:id="@+id/login_tx_userid"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="0.7"
                android:background="@drawable/login_edit_text_bg_1"
                android:hint="@string/login_04"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@android:color/background_light"
                android:textColorHint="@color/white_1"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.2"
            android:gravity="center|bottom">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center|end"
                android:paddingEnd="15dp"
                android:paddingStart="5dp"
                android:text="@string/login_02"
                android:textColor="@android:color/background_light"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="0.7"
                android:background="@drawable/login_edit_text_bg_1"
                android:hint="@string/login_05"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="0dp"
                android:paddingStart="10dp"
                android:textColor="@android:color/background_light"
                android:textColorHint="@color/white_1"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center">

            <CheckBox
                android:id="@+id/login_cb_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@null"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/checkbox_bg1"
                android:drawablePadding="4.0dip"
                android:text="保存密码"
                android:textColor="#ffffffff"
                android:textSize="10.0sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/checkbox_bg1"
                android:drawablePadding="4.0dip"
                android:text="CA加密"
                android:textColor="#ffffffff"
                android:textSize="10.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="0.2"
            android:gravity="center|top"
            android:orientation="horizontal">


            <Button
                android:id="@+id/login_bt_login"
                android:layout_width="270dp"
                android:layout_height="40dp"
                android:background="@drawable/login_bt"
                android:text="@string/login_03"
                android:textColor="#ffffff"
                android:textSize="18sp"

                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.2"
        android:gravity="center|bottom"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_maker"
            android:textColor="#ffffff"
            android:textSize="10sp" />
    </LinearLayout>
</LinearLayout>