<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="217dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="217dp"
                android:layout_centerInParent="true"
                android:background="@drawable/setting_page_head_blank_01" />

            <ImageView
                android:id="@+id/fragment_setting_image_head"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@drawable/setting_head_blank"
                android:padding="2dp"
                android:src="@drawable/setting_head" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_toRightOf="@+id/fragment_setting_image_head"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_setting_tx_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_5"
                    android:text="@string/setting_main_01"
                    android:textColor="@color/white_1"
                    android:textSize="@dimen/txt_20" />

                <TextView
                    android:id="@+id/fragment_setting_tx_userid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_5"
                    android:text="@string/setting_main_02"
                    android:textColor="@color/blue_10"
                    android:textSize="@dimen/txt_16" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:background="@drawable/bg_button_white"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fragment_setting_ll_userinfo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bt_home_setting"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="@dimen/dp_5"
                    android:src="@drawable/img_setting_user" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_main_03"
                    android:textColor="@color/black_0"
                    android:textSize="@dimen/txt_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_0" />

            <LinearLayout
                android:id="@+id/fragment_setting_ll_clean"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bt_home_setting"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="@dimen/dp_5"
                    android:src="@drawable/img_setting_clean" />

                <TextView
                    android:id="@+id/fragment_setting_tx_clean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_main_04"
                    android:textColor="@color/black_0"
                    android:textSize="@dimen/txt_16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/fragment_setting_tx_cleannum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:textColor="@color/gray_1"
                        android:textSize="@dimen/txt_16" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_0" />

            <LinearLayout
                android:id="@+id/fragment_setting_ll_version"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bt_home_setting"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="@dimen/dp_5"
                    android:src="@drawable/img_setting_user" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_main_05"
                    android:textColor="@color/black_0"
                    android:textSize="@dimen/txt_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_0"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="@dimen/dp_5"
                    android:src="@drawable/img_setting_version" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_main_05"
                    android:textColor="@color/black_0"
                    android:textSize="@dimen/txt_16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/fragment_setting_ll_versionnum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_main_06"
                        android:textColor="@color/gray_1"
                        android:textSize="@dimen/txt_16" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_setting_ll_exit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:paddingBottom="40dp">

        <Button
            android:id="@+id/fragment_setting_bt_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/button"
            android:text="@string/setting_main_07"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_20" />
    </LinearLayout>
</LinearLayout>