<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_1">
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipe_container">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_11"
                android:padding="10dp"
                android:baselineAligned="false">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/l_saoyisao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/bg_home_bt"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/home_saoyisao"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/home_01"
                            android:textColor="#ffffff"
                            android:textSize="16sp" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables"
                        android:clickable="true"
                        android:id="@+id/l_chayinhuan"
                        android:focusable="true"
                        android:background="@drawable/bg_home_bt"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/home_chayinhuan"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:textSize="16sp"
                            android:text="@string/home_02"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables"
                        android:clickable="true"
                        android:id="@+id/l_chasanfang"
                        android:focusable="true"
                        android:background="@drawable/bg_home_bt"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/home_chasanfang"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:textSize="16sp"
                            android:text="@string/home_03"
                            />

                    </LinearLayout>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables"
                        android:clickable="true"
                        android:id="@+id/l_paizhaopian"
                        android:focusable="true"
                        android:background="@drawable/bg_home_bt"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/home_paizhaopian"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:textSize="16sp"
                            android:text="@string/home_00"
                            />

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/l_new_message"
                android:clickable="true"
                android:focusable="true"
                android:background="@color/blue_5"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_04"
                    tools:ignore="HardcodedText"
                    android:padding="5dp"
                    android:textSize="@dimen/txt_14"
                    android:textColor="@color/white_1"
                    android:gravity="center"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white_2">
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/s_messages_state"
                    android:entries="@array/s_home_message_state_1"
                    android:layout_weight="1" />
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/s_messages_time"
                    android:entries="@array/s_home_message_time_1"
                    android:layout_weight="1"/>
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/s_messages_people"
                    android:entries="@array/s_home_message_state_1"
                    android:layout_weight="1"
                    android:visibility="gone"/>
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/s_messages_address"
                    android:entries="@array/s_home_message_address_1"
                    android:layout_weight="1"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_2"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_5"
                android:id="@+id/list_message_home"/>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>